; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_set_data_ptr_seg_atomic.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_set_data_ptr_seg_atomic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_wqe_data_seg = type { i32, i8*, i8* }
%struct.ibv_sge = type { i32, i32 }

@MLX5_ATOMIC_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5_wqe_data_seg*, %struct.ibv_sge*)* @set_data_ptr_seg_atomic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_data_ptr_seg_atomic(%struct.mlx5_wqe_data_seg* %0, %struct.ibv_sge* %1) #0 {
  %3 = alloca %struct.mlx5_wqe_data_seg*, align 8
  %4 = alloca %struct.ibv_sge*, align 8
  store %struct.mlx5_wqe_data_seg* %0, %struct.mlx5_wqe_data_seg** %3, align 8
  store %struct.ibv_sge* %1, %struct.ibv_sge** %4, align 8
  %5 = load i32, i32* @MLX5_ATOMIC_SIZE, align 4
  %6 = call i8* @htobe32(i32 %5)
  %7 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %3, align 8
  %8 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %7, i32 0, i32 2
  store i8* %6, i8** %8, align 8
  %9 = load %struct.ibv_sge*, %struct.ibv_sge** %4, align 8
  %10 = getelementptr inbounds %struct.ibv_sge, %struct.ibv_sge* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i8* @htobe32(i32 %11)
  %13 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %3, align 8
  %14 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %13, i32 0, i32 1
  store i8* %12, i8** %14, align 8
  %15 = load %struct.ibv_sge*, %struct.ibv_sge** %4, align 8
  %16 = getelementptr inbounds %struct.ibv_sge, %struct.ibv_sge* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @htobe64(i32 %17)
  %19 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %3, align 8
  %20 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  ret void
}

declare dso_local i8* @htobe32(i32) #1

declare dso_local i32 @htobe64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
